# zankyou

./: .gitignore  Cargo.toml  flake.nix
.config/: config.toml
macros/: Cargo.toml
macros/src/: lib.rs
nix/modules/flake/: default.nix  devenvs.nix  overlays.nix  packages.nix  treefmt.nix
parser/src/: lib.rs
src/lib/: command.rs  mod.rs  server.rs
src/zankyouctl/: main.rs
src/zankyoud/: main.rs
zankyou/: Cargo.toml
zankyou/src/zankyou/: app_event.rs  config.rs  main.rs  tui.rs
zankyou/src/zankyou/component/: library.rs  root.rs
zankyou/src/zankyou/config/: input_action.rs  keys.rs
zankyou/src/zankyou/config/keys/: input_action.rs  key_chord.rs
zankyou/src/zankyou/tui/: app.rs  config.rs  ecs.rs  event.rs
zankyou/src/zankyou/tui/config/: config_manager.rs  keys.rs  util.rs
zankyou/src/zankyou/tui/config/keys/: action.rs  error.rs  key_chord.rs  key_config.rs  key_handler.rs  key_map.rs  key_sequence.rs
zankyou/src/zankyou/tui/ecs/: event_handling.rs  ui_component.rs
zankyou/src/zankyou/tui/ecs/event_handling/: async_queue.rs  cursor_pos.rs  flow.rs  focus.rs  queue.rs
zankyou/src/zankyou/tui/event/: queue.rs  sender.rs  task.rs
