[workspace]
resolver = "3"
members = ["macros", "parser"]

[package]
name = "zankyou"
version = "0.1.0"
edition = "2024"
description = "A modern terminal music player written in Rust"
authors = ["Luna Present <code@lunapresent.net>"]
license = "EUPL-1.2"
repository = "https://github.com/LunaPresent/zankyou"
keywords = ["music", "lyrics", "synced-lyrics"]
categories = ["multimedia::audio"]
build = "build.rs"
default-run = "zankyou"

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "zankyou"
path = "src/zankyou/main.rs"

[[bin]]
name = "zankyoud"
path = "src/zankyoud/main.rs"

[[bin]]
name = "zankyouctl"
path = "src/zankyouctl/main.rs"

[dependencies]
macros.path = "./macros"
parser.path = "./parser"
clap = { version = "4.5.41", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
derive_more = { version = "2.0.1", features = ["from"] }
directories = "6.0.0"
futures = "0.3.31"
interprocess = { version = "2.2.3", features = ["tokio"] }
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
toml = "0.9.2"

[build-dependencies]
anyhow = "1.0.98"
vergen-git2 = { version = "1.0.7", features = ["build", "cargo"] }
