[package]
name = "zankyou"
description = "A modern terminal music player written in Rust"
build = "build.rs"
default-run = "zankyou"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
path = "src/lib/mod.rs"

[[bin]]
name = "zankyou"
path = "src/zankyou/main.rs"

[[bin]]
name = "zankyoud"
path = "src/zankyoud/main.rs"

[[bin]]
name = "zankyouctl"
path = "src/zankyouctl/main.rs"

[dependencies]
zankyou-macros.workspace = true
zankyou-parser.workspace = true
bevy_ecs = "0.16.1"
clap = { version = "4.5.41", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "from"] }
directories = "6.0.0"
futures = "0.3.31"
interprocess = { version = "2.2.3", features = ["tokio"] }
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
signal-hook = "0.3.18"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = "0.7.15"
toml = "0.9.2"
thiserror = "2.0.14"
serde_with = "3.14.0"
smallvec = { version = "1.15.1", features = ["serde"] }

[build-dependencies]
anyhow = "1.0.98"
vergen-git2 = { version = "1.0.7", features = ["build", "cargo"] }
